fix sidebar layout on mobile

--- a/clients/apps/web/src/styles/globals.scss
+++ b/clients/apps/web/src/styles/globals.scss
@@ -72,6 +72,11 @@
     --popover: 0 0% 100%;
     --popover-foreground: 224 71.4% 4.1%;
 
+    --sidebar-background: 210, 11%, 96%;
+    --sidebar-foreground: 233 10% 10%;
+    --sidebar-primary: 217 100% 50%;
+    --sidebar-primary-foreground: 210 20% 98%;
+
     --primary: 217 100% 50%;
     --primary-foreground: 210 20% 98%;
 
@@ -102,6 +107,11 @@
 
     --popover: 233 8% 11%;
     --popover-foreground: 231 17% 85%;
+
+    --sidebar-background: 233 8% 5%;
+    --sidebar-foreground: 231 17% 85%;
+    --sidebar-primary: 217 100% 50%;
+    --sidebar-primary-foreground: 231 17% 100%;
 
     --primary: 217 100% 50%;
     --primary-foreground: 231 17% 100%;
